--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
+    <title>BirdDog App : Scout Monitoring on the Go</title>
     <style>
       * { margin:0;padding:0; }
       body { background-color:#FFF; font-size:14px; font-family:Verdana, sans-serif; }
