--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <title>BirdDog App : Scout Monitoring on the Go</title>
+    <meta name="viewport" content="width=650, user-scalable=yes">
     <style>
       * { margin:0;padding:0; }
       body { background-color:#FFF; font-size:14px; font-family:Verdana, sans-serif; }
