reorg and new iphone without reflection

--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
       #content #screenshots { clear:both; height:50px; padding:20px; }
       #content #app_store { position:relative; margin:0 auto; text-align:center; padding-top:5px; height:100px; }
       #content #app_store #soon { position:absolute; top:0; left:70px; }
-      #content #thanks { border:1px solid #CCC; background-color:#DDD; padding:20px; width:80%; }
-      #footer { clear:both; border:1px solid #EEB; border-bottom:0px; background-color:#FFC; height:20px; }
+      #required { clear:both; background-color:#FFC; border:1px solid #EEB; padding:5px 20px 0 20px; }
+      #required a, #footer a { color:#222; }
+      #required a:hover, #footer a:hover { text-decoration:none; }
+      #footer { height:20px;margin-top:5px; }
       #footer p { padding:1px 10px; font-size:12px; line-height:18px; }
-      #footer a { text-decoration:none; color:#222; }
       
       .left  { float:left; width:45%; margin:10px 5px 10px 25px; }
       .right { float:left; width:45%; margin-left:10px; padding:10px 0px 10px 10px; }
+      .huge_font { font-size:1.8em;vertical-align:middle; }
+      .centered { text-align:center; }
     </style>
   </head>
   <body>
@@ -56,11 +59,13 @@
       </div>
       <div id="content">
         <div class="left">
+          <br />
           <p>
             BirdDog is a lightweight utility designed to remotely
             view of your servers and applications being monitored
             by <a href="http://scoutapp.com">Scout</a>.
           </p>
+
           <ul>
             <li>Track server health including uptime and alert status</li>
             <li>Stay on top of active alerts for quick troubleshooting</li>
@@ -73,47 +78,32 @@
             <img src="images/appstore.png" alt="Available on the App Store" />
             <img src="images/soon.png" alt="" id="soon" style="width:50%;" />
           </div>
-
-          <h4>Requirements</h4>
-          <ul>
-            <li>iPhone or iPod Touch running iOS 4</li>
-            <li><a href="http://scoutapp.com">Scout</a> account</li>
-          </ul>
         </div>
+        
         <div id="screenshots">
-          <h2 style="text-align:center;color:#CCC;">Screenshots Here</h2>
-        </div>
-        <div class="left">
-          <h4>Features</h4>
-          <ul>
-            <li>Some</li>
-            <li>More</li>
-            <li>Features</li>
-            <li>Here</li>
-          </ul>
-        </div>
-        <div class="right">
-          <div id="thanks">
-            <p>
-              <a href="http://scoutapp.com">
-                <img src="images/scout_logo.png" alt="Scout" style="width:150px;" />
-              </a>
-              <br />
-              Powered by <a href="http://scoutapp.com">Scout</a>
-            </p>
-            <br />
-
-            <p>
-              <a href="http://andrewreifman.com">
-                <img src="images/ar_logo.png" alt="Andrew Reifman" style="width:50px;" />
-              </a>
-              <br />
-              Icon design by <a href="http://andrewreifman.com">Andrew Reifman</a>
-            </p>
-          </div>
+          <h2 style="text-align:center;font-size:2.0em;color:#DDD;">Screenshots Here</h3>
         </div>
       </div>
+      <div id="required">
+        <p>
+          <span class="huge_font">*</span>
+          <strong>Requires</strong> an iPhone or iPod Touch running iOS 4
+          and a <a href="http://scoutapp.com">Scout</a> account.
+        </p>
+      </div>
       <div id="footer">
+        <p class="centered">
+          <a href="http://scoutapp.com">
+            <img src="images/scout_logo.png" alt="Scout" style="width:150px;" />
+          </a>
+          Powered by <a href="http://scoutapp.com">Scout</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;
+
+          <a href="http://andrewreifman.com">
+            <img src="images/ar_logo.png" alt="Andrew Reifman" style="height:40px;" />
+          </a>
+          Icon design by <a href="http://andrewreifman.com">Andrew Reifman</a>
+        </p>
         <p>
           &copy; 2010 <a href="http://v8logic.com">V8 Logic</a>
         </p>
