redoing some alignment and removing logos from thanks area

--- a/index.html
+++ b/index.html
@@ -19,17 +19,20 @@
       #content { min-height:500px; }
       #content a { color:#666; }
       #content a:hover { text-decoration:none; }
-      #content ul { margin:10px 0px 10px 20px; }
-      #content li { margin:15px 5px;color:#666; }
+      #content ul { margin:25px 0px 10px 0px; }
+      #content li { margin:15px 5px 15px 0px; color:#666; }
       #content h4 { color:#444; }
       #content #screenshots { clear:both; height:50px; padding:20px; }
-      #content #app_store { position:relative; margin:0 auto; text-align:center; padding-top:5px; height:100px; }
-      #content #app_store #soon { position:absolute; top:0; left:70px; }
+      #content #app_store { position:relative; margin:0px; padding-top:5px; height:100px; }
+      #content #app_store #soon { position:absolute; top:0; left:25px; }
       #required { clear:both; background-color:#FFC; border:1px solid #EEB; padding:5px 20px 0 20px; }
       #required a, #footer a { color:#222; }
       #required a:hover, #footer a:hover { text-decoration:none; }
       #footer { height:20px;margin-top:5px; }
       #footer p { padding:1px 10px; font-size:12px; line-height:18px; }
+      #thanks { color:#AAA; }
+      #thanks a { color:#AAA; }
+      #footer #thanks a:hover { text-decoration:none; color:#666; }
       
       .left  { float:left; width:45%; margin:10px 5px 10px 25px; }
       .right { float:left; width:45%; margin-left:10px; padding:10px 0px 10px 10px; }
@@ -92,18 +95,16 @@
         </p>
       </div>
       <div id="footer">
-        <p class="centered">
-          <a href="http://scoutapp.com">
-            <img src="images/scout_logo.png" alt="Scout" style="width:150px;" />
-          </a>
-          Powered by <a href="http://scoutapp.com">Scout</a>
-          &nbsp;&nbsp;&nbsp;&nbsp;
+        <p id="thanks" class="centered">
+          App by <a href="http://v8logic.com">V8 Logic</a>
+          &nbsp;|&nbsp;
 
-          <a href="http://andrewreifman.com">
-            <img src="images/ar_logo.png" alt="Andrew Reifman" style="height:40px;" />
-          </a>
-          Icon design by <a href="http://andrewreifman.com">Andrew Reifman</a>
+          Powered by <a href="http://scoutapp.com">Scout</a>
+          &nbsp;|&nbsp;
+
+          Icon by <a href="http://andrewreifman.com">Andrew Reifman</a>
         </p>
+        <br />
         <p>
           &copy; 2010 <a href="http://v8logic.com">V8 Logic</a>
         </p>
