--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
       * { margin:0;padding:0; }
       body { background-color:#FFF; font-size:14px; font-family:Verdana, sans-serif; }
-      #wrapper { margin:0 auto; width:650px; background-color:#FFF;position:relative; }
+      #wrapper { margin:0 auto; width:650px; background-color:#FFF; position:relative; }
       #status_bar { background-color:#222; height:20px; color:#EEE; padding:0px 15px; font-size:10px; font-weight:bold; line-height:20px; text-align:right; }
       #status_bar a { color:#EEE;text-decoration:none; }
       #header { background:#000 url('images/header_bg.png') repeat-x; height:175px; position:relative; }
@@ -25,12 +25,12 @@
       #content #screenshots { clear:both; height:50px; padding:20px; }
       #content #app_store { position:relative; margin:0px; padding-top:5px; height:100px; }
       #content #app_store #soon { position:absolute; top:0; left:25px; }
-      #required { clear:both; background-color:#FFC; border:1px solid #EEB; padding:5px 20px 0 20px; }
+      #required { clear:both; text-align:center; background-color:#FFC; border:1px solid #EEB; padding-top:4px; font-size:12px; }
       #required a, #footer a { color:#222; }
       #required a:hover, #footer a:hover { text-decoration:none; }
-      #footer { height:20px;margin-top:5px; }
-      #footer p { padding:1px 10px; font-size:12px; line-height:18px; }
-      #thanks { color:#AAA; }
+      #footer { height:20px; margin-top:5px; }
+      #footer p { padding:1px 10px; font-size:13px; line-height:18px; }
+      #thanks { color:#AAA; font-size:11px; }
       #thanks a { color:#AAA; }
       #footer #thanks a:hover { text-decoration:none; color:#666; }
       
@@ -98,10 +98,8 @@
         <p id="thanks" class="centered">
           App by <a href="http://v8logic.com">V8 Logic</a>
           &nbsp;|&nbsp;
-
           Powered by <a href="http://scoutapp.com">Scout</a>
           &nbsp;|&nbsp;
-
           Icon by <a href="http://andrewreifman.com">Andrew Reifman</a>
         </p>
         <br />
