--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
     <div id="wrapper">
       <div id="status_bar">
         <p><a href="http://v8logic.com">V8 LOGIC</a></p>
+        <div id="twitter">
+          <p>
+            <a href="http://twitter.com/birddogapp">
+              FOLLOW ON
+              <img src="images/sml_twitter_logo.png" alt="Twitter" />
+            </a>
+          </p>
+        </div>
       </div> <!-- status_bar -->
       <div id="header">
         <div id="dog_head"><img src="images/doghead.png" /></div>
