grammar is hard

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <br />
         <p>
           BirdDog is a lightweight utility designed to remotely
-          view of your servers and applications being monitored
+          view your servers and applications being monitored
           by <a href="http://scoutapp.com">Scout</a>.
         </p>
 
