--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
 
         <br />
         <div id="app_store">
-          <img src="images/appstore.png" alt="Available on the App Store" />
-          <img src="images/soon.png" alt="" id="soon" style="width:50%;" />
+          <a href="http://itunes.apple.com/us/app/birddog/id359437429?mt=8">
+            <img src="images/appstore.png" alt="Available on the App Store" />
+          </a>
+          <!-- <img src="images/soon.png" alt="" id="soon" style="width:50%;" /> -->
         </div>
       </div> <!-- content -->
       <div id="screenshots">
