removing twitter follow button for testing

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>BirdDog : Scout Monitoring on the Go for iPhone</title>
     <meta name="description" content="birddog">
-    <meta name="apple-itunes-app" content="app-id=359437429"/>
     <meta name="viewport" content="width=650, user-scalable=yes">
+    <meta name="apple-itunes-app" content="app-id=359437429">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -155,13 +154,6 @@
           &copy; 2010-2012 All Rights Reserved &raquo;
           <a href="http://v8logic.com">V8 Logic</a>
 
-          <div id="follow">
-              <a href="https://twitter.com/birddogapp"
-                 class="twitter-follow-button"
-                 data-show-count="false"
-                 data-lang="en">Follow @birddogapp</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-          </div>
         </div>
       </div>
       <br />
