--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
   <head>
     <meta charset="utf-8">
     <title>BirdDog : Scout Monitoring on the Go for iPhone</title>
-    <meta name="description" content="birddog">
-    <meta name="viewport" content="width=650, user-scalable=yes">
-    <meta name="apple-itunes-app" content="app-id=359437429">
+    <meta name="description" content="birddog" />
+    <meta name="viewport" content="width=650, initial-scale=2.3, user-scalable=yes" />
+    <meta name="apple-itunes-app" content="app-id=359437429" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
