adding twitter button back in

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>BirdDog : Scout Monitoring on the Go for iPhone</title>
     <meta name="description" content="birddog" />
-    <meta name="viewport" content="width=650, initial-scale=2.3, user-scalable=yes" />
+    <meta name="viewport" content="width=650, initial-scale=2.5, user-scalable=yes" />
     <meta name="apple-itunes-app" content="app-id=359437429" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -154,8 +154,15 @@
           &copy; 2010-2012 All Rights Reserved &raquo;
           <a href="http://v8logic.com">V8 Logic</a>
 
+          <div id="follow">
+            <a href="https://twitter.com/birddogapp"
+                class="twitter-follow-button"
+                data-show-count="false"
+                data-lang="en">Follow @birddogapp</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          </div>
         </div>
-      </div>
+      </div> <!-- footer -->
       <br />
     </div>
 
