--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           background-image:url('img/screen4s@2x.png');
         }
       }
+      @media only screen and (max-device-width: 480px) {
+        body { width:650px; }
+      }
     </style>
 
     <script type="text/javascript">
