removing view port width

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>BirdDog : Scout Monitoring on the Go for iPhone</title>
     <meta name="description" content="birddog" />
-    <meta name="viewport" content="width=650, user-scalable=yes" />
+    <meta name="viewport" content="user-scalable=yes" />
     <meta name="apple-itunes-app" content="app-id=359437429" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
